--- a/.eslintrc
+++ b/.eslintrc
@@ -14,13 +14,7 @@
     },
     "rules": {
         "object-curly-spacing": ["warn", "always"],
-        "no-unused-vars": [
-            "error",
-            {
-                "vars": "all",
-                "args": "none"
-            }
-        ],
+        "no-unused-vars": ["error"],
         "@typescript-eslint/no-unused-vars": [
             "error",
             {
@@ -54,8 +48,6 @@
             "error",
             {
                 "devDependencies": [
-                    "**/*.test.js",
-                    "**/*.test.jsx",
                     "**/*.test.ts",
                     "**/*.test.tsx",
                     "src/tests/**/*"
