--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+        "dev": "npm-run-all -p dev:*",
+        "dev:app": "ts-node-dev --respawn --transpile-only src/index.ts",
+        "dev:queue": "ts-node-dev --respawn --transpile-only src/bull/index.ts",
         "build": "yarn tsc",
         "crawl": "node app/services/crawl.service.js"
     },
     "devDependencies": {
+        "@types/bull": "^3.15.2",
         "@types/cors": "^2.8.12",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.13",
@@ -32,13 +35,16 @@
         "eslint-plugin-import": "^2.23.4",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-prettier": "^3.4.0",
+        "npm-run-all": "^4.1.5",
         "prettier": "^2.3.2",
         "prettier-eslint": "^12.0.0",
         "prettier-eslint-cli": "^5.0.1",
-        "ts-node-dev": "^1.1.8"
+        "ts-node-dev": "^1.1.8",
+        "typescript": "3.8.0-beta"
     },
     "dependencies": {
         "axios": "^0.21.1",
+        "bull": "^3.23.0",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
