--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "E120721",
+    "name": "@trackcovid/backend",
     "version": "0.1.0",
     "description": "Simple node app",
     "main": "index.js",
@@ -11,6 +11,7 @@
         "dev": "npm-run-all -p dev:*",
         "dev:app": "ts-node-dev --respawn --transpile-only src/index.ts",
         "dev:queue": "ts-node-dev --respawn --transpile-only src/bull/index.ts",
+        "dev:cron": "ts-node-dev  src/services/crawl.service.ts",
         "build": "yarn tsc",
         "crawl": "node app/services/crawl.service.js"
     },
