--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "author": "Trung Hieu",
     "license": "MIT",
     "private": true,
-    "type": "module",
     "scripts": {
+        "start": "pm2 start ecosystem.config.js",
+        "log": "pm2 logs",
+        "destroy": "pm2 kill",
         "dev": "npm-run-all -p dev:*",
         "dev:app": "ts-node-dev --respawn --transpile-only src/index.ts",
         "dev:queue": "ts-node-dev --respawn --transpile-only src/bull/index.ts",
@@ -18,6 +20,7 @@
     "devDependencies": {
         "@types/bull": "^3.15.2",
         "@types/cors": "^2.8.12",
+        "@types/cron": "^1.7.3",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.13",
         "@types/helmet": "^4.0.0",
@@ -47,12 +50,13 @@
         "axios": "^0.21.1",
         "bull": "^3.23.0",
         "cors": "^2.8.5",
+        "cron": "^1.8.2",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "firebase": "^8.7.1",
         "helmet": "^4.6.0",
         "morgan": "^1.10.0",
-        "node-schedule": "^2.0.0",
+        "pm2": "^5.1.0",
         "puppeteer": "^10.1.0"
     }
 }
